--- a/lesson1_decorators/decorators_info.ipynb
+++ b/lesson1_decorators/decorators_info.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "ba98c602",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "6b0d926e",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "50b83a63",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:00.000843\n",
-      "0:00:00.000656\n"
+      "0:00:00.000985\n",
+      "0:00:00.000775\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c7cf0328",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "749cfdde",
    "metadata": {},
    "outputs": [
@@ -130,10 +130,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:00.000926\n",
-      "0:00:00.000733\n",
-      "0:00:00.000867\n",
-      "0:00:00.000680\n"
+      "0:00:00.001126\n",
+      "0:00:00.000716\n",
+      "0:00:00.000877\n",
+      "0:00:00.000793\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "5f24a7df",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "4fc087e5",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "5fd19e53",
    "metadata": {},
    "outputs": [
@@ -216,8 +216,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:00.000759\n",
-      "0:00:00.001036\n"
+      "0:00:00.000744\n",
+      "0:00:00.001033\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "0ab5807b",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,9 @@
      "output_type": "stream",
      "text": [
       "name\n",
-      "name\n"
+      "name\n",
+      "0:00:00.000015\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98]\n"
      ]
     }
    ],
@@ -280,12 +282,12 @@
     "    l = [x for x in range(n) if x % 2 == 0]\n",
     "    return l\n",
     "\n",
-    "#print(seven(100))"
+    "print(seven(100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "102e88d6",
    "metadata": {},
    "outputs": [
@@ -293,11 +295,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:00.000007\n",
+      "0:00:00.000008\n",
       "0:00:00.000006\n",
       "name\n",
       "0:00:00.000003\n",
-      "0:00:00.000012\n"
+      "0:00:00.000011\n"
      ]
     }
    ],
@@ -310,27 +312,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "id": "834d863a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0:00:00.000004\n",
-      "0:00:00.000005\n"
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [15], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;129;43m@timeit\u001b[39;49m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;43;01mdef\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;21;43msum1\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mreturn\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;129m@timeit\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msum2\u001b[39m(\u001b[38;5;241m*\u001b[39m, a, b):\n",
+      "Cell \u001b[0;32mIn [13], line 2\u001b[0m, in \u001b[0;36mtimeit\u001b[0;34m(new_param)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtimeit\u001b[39m(new_param):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnew_param\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mouter\u001b[39m(func):\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
