--- a/lesson1_decorators/decorator_info/decorators_examples .ipynb
+++ b/lesson1_decorators/decorator_info/decorators_examples .ipynb
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "77ac1033",
    "metadata": {},
    "outputs": [],
@@ -547,12 +547,13 @@
     "                # видаляємо перший елемент\n",
     "                deco._cache.popitem(last=False)\n",
     "            deco._cache[cache_key] = result\n",
-    "            return result\n",
     "            print(result)\n",
+    "            return result\n",
+    "\n",
     "\n",
     "        deco._cache = OrderedDict()\n",
-    "        return deco\n",
     "        print(deco)\n",
+    "        return deco\n",
     "\n",
     "    return internal\n",
     "    print(internal)"
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "3fa55422",
    "metadata": {},
    "outputs": [
@@ -568,13 +569,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time internal: 1.2159347534179688e-05s\n",
-      "Elapsed time internal: 1.3113021850585938e-05s\n",
-      "Elapsed time internal: 9.059906005859375e-06s\n",
-      "Elapsed time internal: 7.867813110351562e-06s\n",
-      "Elapsed time internal: 7.867813110351562e-06s\n",
-      "Elapsed time internal: 7.867813110351562e-06s\n",
-      "Elapsed time internal: 7.152557373046875e-06s\n"
+      "<function cache.<locals>.internal.<locals>.deco at 0x109cb8670>\n",
+      "Elapsed time internal: 0.0004200935363769531s\n",
+      "<function cache.<locals>.internal.<locals>.deco at 0x1097b9990>\n",
+      "Elapsed time internal: 2.09808349609375e-05s\n",
+      "<function cache.<locals>.internal.<locals>.deco at 0x109c96b00>\n",
+      "Elapsed time internal: 1.5974044799804688e-05s\n",
+      "<function cache.<locals>.internal.<locals>.deco at 0x109c97be0>\n",
+      "Elapsed time internal: 1.3828277587890625e-05s\n",
+      "<function cache.<locals>.internal.<locals>.deco at 0x109cb85e0>\n",
+      "Elapsed time internal: 1.2874603271484375e-05s\n",
+      "<function cache.<locals>.internal.<locals>.deco at 0x109cb9510>\n",
+      "Elapsed time internal: 1.3828277587890625e-05s\n",
+      "<function cache.<locals>.internal.<locals>.deco at 0x109cb95a0>\n",
+      "Elapsed time internal: 1.3113021850585938e-05s\n"
      ]
     },
     {
@@ -583,7 +591,7 @@
        "<function __main__.cache.<locals>.internal.<locals>.deco>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
